--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.8",
+    "@types/react-transition-group": "^4.4.1",
+    "@types/styled-components": "^5.1.9",
     "typescript": "4.3.2"
   }
 }
